# cpp_learning

./: PLAN.md  README.md
01_hello_cpp/: ex01_hello.cpp  ex02  ex02_greeting.cpp  ex03  ex03_calculator.cpp  ex04  ex04_temperature.cpp  ex05  ex05_multiline.cpp
02_types_and_variables/: README.md  ex01_sizes.cpp  ex02  ex02_auto.cpp  ex03_const.cpp  ex04_conversions.cpp  ex05_overflow.cpp
03_control_flow/: ex01_fizzbuzz.cpp  ex02_guessing.cpp  ex03  ex03_switch.cpp  ex04  ex04_patterns.cpp  ex05_collatz.cpp
04_functions/: ex01_overloads.cpp  ex02_defaults.cpp  ex03_pass_by.cpp  ex04_recursion.cpp  ex05_higher_order.cpp
05_references_and_pointers/: ex01  ex01_ref_basics.cpp  ex02_ptr_ref_compare.cpp  ex03_const_correctness.cpp  ex04_new_delete.cpp  ex05_linked_list.cpp
06_strings_and_arrays/: README.md  ex01_string_ops.cpp  ex02_array_vs_vector.cpp  ex03_word_counter.cpp  ex04_matrix.cpp  ex05_string_toolkit.cpp
07_structs_and_enums/: ex01_shapes.cpp  ex02  ex02_enum_state.cpp  ex03_student_db.cpp  ex04  ex04_deck_of_cards.cpp  ex05_ecs.cpp
phase_1/01_hello_cpp/: README.md  ex01  ex03_calculator.cpp  ex04_temperature.cpp  ex05_multiline.cpp  ex3
phase_1/02_types_and_variables/: ex01  ex01_sizes.cpp  ex03  ex04  ex04_conversions.cpp  ex05  ex05_overflow.cpp
phase_1/03_control_flow/: README.md  ex01  ex01_fizzbuzz.cpp  ex02  ex04_patterns.cpp  ex05  ex05_collatz.cpp
phase_1/04_functions/: README.md  ex01  ex01_overloads.cpp  ex02  ex02_defaults.cpp  ex03  ex03_pass_by.cpp  ex04  ex04_recursion.cpp  ex05  ex05_higher_order.cpp
phase_1/05_references_and_pointers/: README.md  ex01_ref_basics.cpp  ex02  ex02_ptr_ref_compare.cpp  ex03  ex04  ex04_new_delete.cpp  ex05  ex05_linked_list.cpp
phase_1/06_strings_and_arrays/: ex01  ex01_string_ops.cpp  ex02  ex03  ex03_word_counter.cpp  ex04  ex04_matrix.cpp  ex05  ex05_string_toolkit.cpp
phase_1/07_structs_and_enums/: README.md  ex01  ex01_shapes.cpp  ex02_enum_state.cpp  ex03  ex04_deck_of_cards.cpp  ex05
phase_1/P1_project/: README.md  contacts  contacts.cpp
phase_4/17_cmake_and_structure/ex01_first_cmake/: CMakeLists.txt
phase_4/17_cmake_and_structure/ex01_first_cmake/.cache/clangd/index/: main.cpp.7C6D65441225531B.idx
phase_4/17_cmake_and_structure/ex01_first_cmake/src/: main.cpp
phase_4/17_cmake_and_structure/ex02_multi_file/: CMakeLists.txt
phase_4/17_cmake_and_structure/ex02_multi_file/.cache/clangd/index/: main.cpp.0519DA2CFE249DE1.idx  task.cpp.E8A1707046CC8C6F.idx  task.h.C7DAF2602DE8C6DC.idx
phase_4/17_cmake_and_structure/ex02_multi_file/include/: task.h
phase_4/17_cmake_and_structure/ex02_multi_file/src/: main.cpp  task.cpp
phase_4/17_cmake_and_structure/ex03_calculator_lib/: CMakeLists.txt
phase_4/17_cmake_and_structure/ex03_calculator_lib/.cache/clangd/index/: calc.cpp.5DCD190E8D5ECC9D.idx  calc.h.FB0BD8D7E1DCA6E9.idx  main.cpp.88BB1119986CF5B0.idx  stats.cpp.F64215639E84B98D.idx  stats.h.E57CC0472E86A559.idx
phase_4/17_cmake_and_structure/ex03_calculator_lib/include/: stats.h
phase_4/17_cmake_and_structure/ex03_calculator_lib/src/: calc.cpp  stats.cpp
phase_4/18_testing/ex01_test_calculator/: CMakeLists.txt
phase_4/18_testing/ex01_test_calculator/.cache/clangd/index/: calc.cpp.7DF37F79E06D47AC.idx  calc.h.89BE1C49E5DD7EEE.idx  main.cpp.CD585163AEA89F4B.idx  stats.cpp.DE439A756480FEAC.idx  stats.h.64E393A1C8C164AA.idx  test_calc.cpp.339C6D8078949882.idx  test_stats.cpp.59F2E4F3BB9CE0E2.idx
phase_4/18_testing/ex01_test_calculator/app/: main.cpp
phase_4/18_testing/ex01_test_calculator/include/: calc.h
phase_4/18_testing/ex01_test_calculator/src/: calc.cpp  stats.cpp
phase_4/18_testing/ex01_test_calculator/tests/: test_calc.cpp  test_stats.cpp
phase_5/19_error_handling/: CMakeLists.txt  README.md
phase_5/19_error_handling/.cache/clangd/index/: config.cpp.706A75AD9F8C4657.idx  config.h.9B730E6EE5CDD8AF.idx  main.cpp.9D26E415D4C9A246.idx  test_config.cpp.51F414847DD1421B.idx
phase_5/19_error_handling/app/: main.cpp
phase_5/19_error_handling/include/: config.h
phase_5/19_error_handling/src/: config.cpp
phase_5/19_error_handling/tests/: test_config.cpp
phase_5/20_concurrency/: CMakeLists.txt  README.md  experiment  experiment.cpp
phase_5/20_concurrency/.cache/clangd/index/: main.cpp.2E4EEC28EA53650A.idx  test_thread_pool.cpp.8FDB825AB9CEE209.idx  thread_pool.cpp.0B2535503F529F1D.idx  thread_pool.h.97307D31704EF108.idx
phase_5/20_concurrency/app/: main.cpp
phase_5/20_concurrency/include/: thread_pool.h
phase_5/20_concurrency/src/: thread_pool.cpp
phase_5/20_concurrency/tests/: test_thread_pool.cpp
phase_5/21_file_io/: CMakeLists.txt  README.md
phase_5/21_file_io/.cache/clangd/index/: kvstore.cpp.8F440C6CF5649B80.idx  kvstore.h.5BF957BF42CA518C.idx  main.cpp.7AB673C3C8CA216A.idx  test_kvstore.cpp.634FAE233A17E66A.idx
phase_5/21_file_io/app/: main.cpp
phase_5/21_file_io/include/: kvstore.h
phase_5/21_file_io/src/: kvstore.cpp
phase_5/21_file_io/tests/: test_kvstore.cpp
phase_5/P5_project/: CMakeLists.txt  README.md
phase_5/P5_project/.cache/clangd/index/: log_entry.cpp.2991D4D3C67523AC.idx  log_entry.h.0933EF9739850DE0.idx  log_filter.cpp.342C55C838BA6128.idx  log_filter.h.0564D2C4F2A07C0F.idx  log_processor.cpp.672938D6190168F9.idx  log_processor.h.1FBD8BB757D29FEE.idx  log_stats.cpp.C2E1A0DE860A09A7.idx  log_stats.h.79D696F8D430E53E.idx  main.cpp.4A4DDC0B44CE1512.idx  test_log.cpp.E2F8BB8EA91E8067.idx  thread_pool.cpp.3161314708F953C7.idx  thread_pool.h.FDDE7F1D5AA0257B.idx
phase_5/P5_project/app/: main.cpp
phase_5/P5_project/include/: log_entry.h  log_filter.h  log_processor.h  log_stats.h  thread_pool.h
phase_5/P5_project/src/: log_entry.cpp  log_filter.cpp  log_processor.cpp  log_stats.cpp  thread_pool.cpp
phase_5/P5_project/tests/: test_log.cpp
phase_6/22_design_patterns/: CMakeLists.txt  README.md
phase_6/22_design_patterns/app/: main.cpp
phase_6/22_design_patterns/include/: pipeline.h  stages.h
phase_6/22_design_patterns/src/: pipeline.cpp  stages.cpp
phase_6/22_design_patterns/tests/: test_pipeline.cpp
(+103 files in other folders)
